--- a/changelog.txt
+++ b/changelog.txt
@@ -14,17 +14,31 @@ Developers & Contributers
 - ChrstphrR (CR)
 
 --------------------------------------------------------------------------------
+
+- Rev 305-
+[2007/08/09] RaX - Added GM Level checking to /b and /bb gm commands.
+[2007/08/09] RaX - Fixed Dexterity not showing correctly, a typo was made in 
+ GameConstants.pas and DEX was 6 instead of 5. Also, Idx+1 was changed to just Idx
+ In TCharacter.SendCharaStats to fix the adjustment that was attempted to fix this
+ to begin with.
+[2007/08/09] RaX - Fixed changelog date, the year is 1007 not 2008!
+[2007/08/09] RaX - Fixed heliosgame.sql, an extra comma was preventing imports.
+[2007/08/09] RaX - Updated GetBase and GetJobEXPToNextLevel to take JobName and the Level
+ rather than a TCharacter. StaticDB.
+[2007/08/09] RaX - Removed JanSQL database files (forgot to, sorry!).
+-
+
 - Rev 304-
-[2008/08/09] Aeomin - Added GetCharaName function in Game Database.
-[2008/08/09] Aeomin - Added GM Command flag, so that TStringList won't break parameter when not needed.
-[2008/08/09] Aeomin - Support Aegis /b , /nb broadcast command.
-[2008/08/09] Aeomin - added Gm command #BroadCast and #BroadCastN (with name and no name)
-[2008/08/09] Aeomin - Removed extra useless declares, and Signed/Unsigned warnings (caused in rev 302)
-[2008/08/09] Aeomin - Add FromChar[String] store GM name [GMCommands.pas, GMCommandExe.pas]
+[2007/08/09] Aeomin - Added GetCharaName function in Game Database.
+[2007/08/09] Aeomin - Added GM Command flag, so that TStringList won't break parameter when not needed.
+[2007/08/09] Aeomin - Support Aegis /b , /nb broadcast command.
+[2007/08/09] Aeomin - added Gm command #BroadCast and #BroadCastN (with name and no name)
+[2007/08/09] Aeomin - Removed extra useless declares, and Signed/Unsigned warnings (caused in rev 302)
+[2007/08/09] Aeomin - Add FromChar[String] store GM name [GMCommands.pas, GMCommandExe.pas]
 -
 
 - Rev 303-
-[2008/08/09] Aeomin - Forgot to remove a test function [GMCommandExe.pas]
+[2007/08/09] Aeomin - Forgot to remove a test function [GMCommandExe.pas]
 -
 
 - Rev 302 -
