--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 308-
+[2007/08/10] RaX - Implemented SQLite->job and base exp tables routines.
+-
+
 - Rev 307-
 [2007/08/10] RaX - Fixed MaxHP not showing on level up.
 [2007/08/10] RaX - Implemented FullHPOnLevel and FullSPOnLevel fields in zone.ini.
