--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,14 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 310 -
+[2007/08/10] Aeomin - Changed Error type from String to TStringList, now can send more than 1 line of GM Command result! [GMCommands.pas, GMCommandExe.pas, ZoneRecv.pas, ZoneSend.pas, InterRecv.pas, InterSend.pas]
+[2007/08/10] Aeomin - Added GM Command #GiveJobExp (Request by RaX)
+[2007/08/10] Note : There's no need to edit GMCommandsOptions.pas when add/delete/edit a command.
+[2007/08/10] Aeomin - Added GMCommandsOptions.pas to load/save command level config!
+[2007/08/10] Aeomin - Renamed GM Command #GiveBaseExperience => #GiveBaseExp (Request by RaX)
+-
+
 - Rev 309-
 [2007/08/10] RaX - Fixed Base Leveling to check the experience databases to make
  sure we don't level outside of the values set there(checks for nulls). Even if
