--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 322 -
+[2007/08/13] RaX - Updated stat points code to remember extra stat points given by outside sources.
+-
+
 - Rev 321 -
 [2007/08/13] Aeomin - Fixed a query error caused Helios freeze (Sqlite) [SQLiteGameDatabase.pas]
 -
