--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,10 @@ Developers & Contributers
 --------------------------------------------------------------------------------
 
 - Rev 325 -
+[2007/08/14] Aeomin - Added GM command #GiveStatusPoints & #GiveSkillPoints (Request by Rax)
+-
+
+- Rev 325 -
 [2007/08/14] Aeomin - Delete few lines of code used for Whisper (really.. i have no idea why i put those before)
 [2007/08/14] Aeomin - Add #Jump command
 -
