--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 331 -
+[2007/08/14] Aeomin - Added a check to prevent integer overflow in #GiveZeny (ah...)
+-
+
 - Rev 330 -
 [2007/08/14] Aeomin - Changed Zeny type from LongWord -> Integer, really pointless, since client treat as integer [Character.pas, Being.pas]
 [2007/08/14] Aeomin - Added GM command #GiveZeny
