--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 335 -
+[2007/08/14] Aeomin - Add EnsureRange so that char server crash with big amount of skill points
+[2007/08/14] Aeomin - Modified limit of #AddStatusPoints and #AddSkillPoints to 1 million
+[2007/08/14] Aeomin - Add GM command #GiveStat (Request by Rax)
+-
+
 - Rev 334 -
 [2007/08/14] RaX - fixed stupid errors from last commit. added constants to prevent
  overflows of levels, stat points, etc. 
