--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,10 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 338 -
+[2007/08/16] RaX - Added range checking to TCharacter calculations(CalcMaxHP, CalcMaxSP, etc.)
+-
+
 - Rev 337 -
 [2007/08/16] RaX - Added range checking to hp and sp packets send in character server
  (caused negative values to be shown).
