[2007/08/20] Aeomin - Added Tsusai's 2 script command (getexp & getJexp)

--- a/changelog.txt
+++ b/changelog.txt
@@ -16,6 +16,10 @@ Developers & Contributers
 --------------------------------------------------------------------------------
 
 - Rev 341 -
+[2007/08/20] Aeomin - Added Tsusai's 2 script command (getexp & getJexp)
+-
+
+- Rev 341 -
 [2007/08/20] Aeomin - Now client able to add stats!!! 
 [2007/08/20] Aeomin - Added procedure SendRequiredStatusPoint [Character.pas]
 [2007/08/20] Aeomin - Added procedure SendStatUPResult [ZoneSend.pas]
