--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,11 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 342 -
+[2007/08/20] Aeomin - Fixed extra "free" status points when deleveling
+[2007/08/20] Aeomin - Fixed when stats reached max cap caused points taken away with no stat added
+-
+
 - Rev 341 -
 [2007/08/20] Aeomin - Added Tsusai's 2 script command (getexp & getJexp)
 -
