--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,15 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 345 -
+[2007/08/21] RaX - Overview: Added Configuration of indy's scheduler. Committed
+ INI entries so we can comment them.
+[2007/08/21] RaX - TCPServerRoutines - Modified ActivateServer to accept 2 params
+ which specify which thread/fiber scheduler to use.
+[2007/08/21] RaX - Added options to all server inis for scheduler and threadpoolsize.
+[2007/08/21] RaX - Added a few comments to inis.
+-
+
 - Rev 344 -
 [2007/08/20] Aeomin - Added GM Command #ResetStats
 [2007/08/20] Aeomin - Added script command ResetStat()
