--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,12 @@ Developers & Contributers
 
 --------------------------------------------------------------------------------
 
+- Rev 350 -
+[2007/10/25] RaX - Added Item descendant classes UseableItem, EquipmentItem and
+MiscItem. Added 2 properties, Name and ID, to TItem. Will create database
+tomorrow and continue implementation.
+-
+
 - Rev 349 -
 [2007/10/23] RaX - Initial item commit, added Item.pas along with comments,
  headers, and constructors/destructors.
